fix: increase button contrast in high contrast mode

--- a/src/styles/custom-components.less
+++ b/src/styles/custom-components.less
@@ -79,10 +79,25 @@
         color: var(--black-700);
     }
 
+    .theme-highcontrast & {
+        color: var(--black-900);
+    }
+
     &.is-selected,
     &:active {
         color: var(--black-900);
         background-color: var(--black-100);
+
+        .theme-highcontrast & {
+            color: var(--black-050);
+            background-color: var(--black-900);
+            &:hover {
+                color: var(--black-050);
+            }
+            &.s-btn.s-btn__dropdown {
+                border-color: var(--black-900);
+            }
+        }
     }
 
     &.is-disabled {
@@ -90,6 +105,11 @@
         cursor: default;
         &:hover {
             background-color: transparent;
+        }
+
+        .theme-highcontrast & {
+            opacity: 0.5;
+            color: var(--black-300);
         }
     }
 
